--- a/internship.html
+++ b/internship.html
@@ -60,7 +60,7 @@
         </div>
             <div class="interninfo">
                 <h2 style="color: Black;">Internship</h2>
-                <p>Company Name     :   Blackbucks Egineers</p>
+                <p>Company Name     :   Blackbucks Engineers</p>
                 <p>Location         :   Hyderabad</p>
                 <p>Internship Title :   Phishing & SQL Injection</p>
                 <p>Duration         :   7th July 2022 to 6th september 2022</p>
